# Copyright by The HDF Group.
# All rights reserved.
#
# This file is part of AXE.  The full AXE copyright notice, including terms
# governing use, modification, and redistribution, is contained in the file
# COPYING at the root of the source code distribution tree.

# This is not a standard GNU package.
AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src test

# Extra files which need to go in the distribution tarball.
EXTRA_DIST = COPYING.txt README.txt

